--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
-cmake_minimum_required(VERSION 3.23)
+cmake_minimum_required(VERSION 3.15...4.1)
 
-project(KodiakFS)
+project(KodiakFS VERSION 1.0
+        DESCRIPTION "A distributed file system"
+        LANGUAGES CXX)
 
 add_subdirectory(metaserver)
 
