--- a/metaserver/CMakeLists.txt
+++ b/metaserver/CMakeLists.txt
@@ -1,2 +1,6 @@
-add_executable(metaserver main.cpp
-        main.cpp)
+add_executable(metaserver
+        main.cpp sqlite3.c sqlite3.h sqlite3ext.h
+        sqlhandler.cpp
+        sqlhandler.h)
+
+target_link_libraries(metaserver PRIVATE spdlog::spdlog)
